lex_analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LETTER

Grammar

Rule 0     S' -> program
Rule 1     program -> program_heading SEMICOLON program_block
Rule 2     program_heading -> PROGRAM identifier
Rule 3     program_heading -> PROGRAM identifier LPAREN program_parameter_list RPAREN
Rule 4     program_parameter_list -> identifier_list
Rule 5     identifier_list -> identifier
Rule 6     identifier_list -> identifier_list COMMA identifier
Rule 7     identifier -> ID
Rule 8     identifier -> UNDERSCORE
Rule 9     identifier -> identifier STRING
Rule 10    identifier -> identifier NUMBER
Rule 11    identifier -> NUMBER
Rule 12    program_block -> block
Rule 13    block -> declarative_part statement_part
Rule 14    declarative_part -> declaration_group
Rule 15    declarative_part -> declarative_part declaration_group
Rule 16    declaration_group -> constant_definition_group
Rule 17    declaration_group -> type_definition_group
Rule 18    declaration_group -> variable_declaration_group
Rule 19    constant_definition_group -> CONST constant_definition SEMICOLON
Rule 20    constant_definition_group -> constant_definition_group constant_definition SEMICOLON
Rule 21    constant_definition -> ID OPERATOR constant
Rule 22    constant -> number
Rule 23    constant -> sign number
Rule 24    constant -> sign real_number
Rule 25    sign -> ADD
Rule 26    sign -> MUL
Rule 27    number -> decimal_integer
Rule 28    number -> sign decimal_integer
Rule 29    decimal_integer -> digit_sequence
Rule 30    digit_sequence -> NUMBER
Rule 31    digit_sequence -> digit_sequence NUMBER
Rule 32    real_number -> digit_sequence ADD fractional_part
Rule 33    real_number -> digit_sequence exponent scale_factor
Rule 34    real_number -> digit_sequence ADD fractional_part exponent scale_factor
Rule 35    fractional_part -> digit_sequence
Rule 36    scale_factor -> sign digit_sequence
Rule 37    exponent -> EXPONENT
Rule 38    variable_declaration_group -> VAR variable_declaration SEMICOLON
Rule 39    variable_declaration_group -> variable_declaration_group variable_declaration SEMICOLON
Rule 40    variable_declaration -> identifier_list COLON type_denoter
Rule 41    type_denoter -> type_identifier
Rule 42    type_identifier -> ID
Rule 43    type_definition_group -> TYPE type_definition SEMICOLON
Rule 44    type_definition_group -> type_definition_group type_definition SEMICOLON
Rule 45    type_definition -> ID ASSIGN type_denoter
Rule 46    statement_part -> compound_statement
Rule 47    compound_statement -> BEGIN statement_sequence END_DOT
Rule 48    compound_statement -> BEGIN statement_sequence END SEMICOLON
Rule 49    statement_sequence -> statement
Rule 50    statement_sequence -> statement_sequence SEMICOLON statement
Rule 51    statement -> simple_statement
Rule 52    statement -> structured_statement
Rule 53    simple_statement -> empty_statement
Rule 54    simple_statement -> assignment_statement
Rule 55    simple_statement -> procedure_statement
Rule 56    structured_statement -> compound_statement
Rule 57    structured_statement -> conditional_statement
Rule 58    structured_statement -> repetitive_statement
Rule 59    empty_statement -> SEMICOLON
Rule 60    assignment_statement -> assignment_statement_lhs ASSIGN expression
Rule 61    assignment_statement_lhs -> variable_access
Rule 62    file_variable -> variable_access
Rule 63    variable_access -> entire_variable
Rule 64    variable_access -> component_variable
Rule 65    entire_variable -> variable_identifier
Rule 66    variable_identifier -> ID
Rule 67    component_variable -> field_designator
Rule 68    field_designator -> field_designator_identifier
Rule 69    field_designator_identifier -> ID
Rule 70    expression -> shift_expression
Rule 71    expression -> shift_expression relational_operator shift_expression
Rule 72    relational_operator -> OPERATOR
Rule 73    shift_expression -> simple_expression
Rule 74    simple_expression -> term
Rule 75    simple_expression -> term ADD term
Rule 76    simple_expression -> term MUL term
Rule 77    term -> factor
Rule 78    term -> factor multiplying_operator factor
Rule 79    factor -> sign unsigned_constant
Rule 80    factor -> number
Rule 81    factor -> variable_access
Rule 82    factor -> LPAREN expression RPAREN
Rule 83    factor -> NOT factor
Rule 84    multiplying_operator -> MUL
Rule 85    unsigned_constant -> number
Rule 86    unsigned_constant -> real_number
Rule 87    unsigned_constant -> constant_identifier
Rule 88    constant_identifier -> ID
Rule 89    conditional_statement -> if_statement
Rule 90    if_statement -> IF boolean_expression THEN statement else_part
Rule 91    boolean_expression -> expression
Rule 92    else_part -> ELSE statement
Rule 93    else_part -> empty_statement
Rule 94    repetitive_statement -> while_statement
Rule 95    while_statement -> WHILE boolean_expression DO statement
Rule 96    write_parameter -> expression
Rule 97    write_parameter -> expression COLON expression
Rule 98    write_parameter -> expression COLON expression COLON expression
Rule 99    write_parameter_list -> LPAREN write_parameter RPAREN
Rule 100   write_parameter_list -> LPAREN STRING COMMA write_parameter RPAREN
Rule 101   write_parameter_list -> LPAREN file_variable COMMA write_parameter RPAREN
Rule 102   write_parameter_list -> LPAREN file_variable COMMA write_parameter COMMA write_parameter RPAREN
Rule 103   read_parameter_list -> LPAREN variable_access RPAREN
Rule 104   read_parameter_list -> LPAREN file_variable COMMA variable_access RPAREN
Rule 105   read_parameter_list -> LPAREN file_variable COMMA variable_access COMMA variable_access RPAREN
Rule 106   procedure_statement -> procedure_identifier read_parameter_list
Rule 107   procedure_statement -> procedure_identifier write_parameter_list
Rule 108   procedure_identifier -> ID

Terminals, with rules where they appear

ADD                  : 25 32 34 75
ASSIGN               : 45 60
BEGIN                : 47 48
COLON                : 40 97 98 98
COMMA                : 6 100 101 102 102 104 105 105
CONST                : 19
DO                   : 95
ELSE                 : 92
END                  : 48
END_DOT              : 47
EXPONENT             : 37
ID                   : 7 21 42 45 66 69 88 108
IF                   : 90
LETTER               : 
LPAREN               : 3 82 99 100 101 102 103 104 105
MUL                  : 26 76 84
NOT                  : 83
NUMBER               : 10 11 30 31
OPERATOR             : 21 72
PROGRAM              : 2 3
RPAREN               : 3 82 99 100 101 102 103 104 105
SEMICOLON            : 1 19 20 38 39 43 44 48 50 59
STRING               : 9 100
THEN                 : 90
TYPE                 : 43
UNDERSCORE           : 8
VAR                  : 38
WHILE                : 95
error                : 

Nonterminals, with rules where they appear

assignment_statement : 54
assignment_statement_lhs : 60
block                : 12
boolean_expression   : 90 95
component_variable   : 64
compound_statement   : 46 56
conditional_statement : 57
constant             : 21
constant_definition  : 19 20
constant_definition_group : 16 20
constant_identifier  : 87
decimal_integer      : 27 28
declaration_group    : 14 15
declarative_part     : 13 15
digit_sequence       : 29 31 32 33 34 35 36
else_part            : 90
empty_statement      : 53 93
entire_variable      : 63
exponent             : 33 34
expression           : 60 82 91 96 97 97 98 98 98
factor               : 77 78 78 83
field_designator     : 67
field_designator_identifier : 68
file_variable        : 101 102 104 105
fractional_part      : 32 34
identifier           : 2 3 5 6 9 10
identifier_list      : 4 6 40
if_statement         : 89
multiplying_operator : 78
number               : 22 23 80 85
procedure_identifier : 106 107
procedure_statement  : 55
program              : 0
program_block        : 1
program_heading      : 1
program_parameter_list : 3
read_parameter_list  : 106
real_number          : 24 86
relational_operator  : 71
repetitive_statement : 58
scale_factor         : 33 34
shift_expression     : 70 71 71
sign                 : 23 24 28 36 79
simple_expression    : 73
simple_statement     : 51
statement            : 49 50 90 92 95
statement_part       : 13
statement_sequence   : 47 48 50
structured_statement : 52
term                 : 74 75 75 76 76
type_definition      : 43 44
type_definition_group : 17 44
type_denoter         : 40 45
type_identifier      : 41
unsigned_constant    : 79
variable_access      : 61 62 81 103 104 105 105
variable_declaration : 38 39
variable_declaration_group : 18 39
variable_identifier  : 65
while_statement      : 94
write_parameter      : 99 100 101 102 102
write_parameter_list : 107

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_heading SEMICOLON program_block
    (2) program_heading -> . PROGRAM identifier
    (3) program_heading -> . PROGRAM identifier LPAREN program_parameter_list RPAREN

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_heading . SEMICOLON program_block

    SEMICOLON       shift and go to state 4


state 3

    (2) program_heading -> PROGRAM . identifier
    (3) program_heading -> PROGRAM . identifier LPAREN program_parameter_list RPAREN
    (7) identifier -> . ID
    (8) identifier -> . UNDERSCORE
    (9) identifier -> . identifier STRING
    (10) identifier -> . identifier NUMBER
    (11) identifier -> . NUMBER

    ID              shift and go to state 6
    UNDERSCORE      shift and go to state 7
    NUMBER          shift and go to state 8

    identifier                     shift and go to state 5

state 4

    (1) program -> program_heading SEMICOLON . program_block
    (12) program_block -> . block
    (13) block -> . declarative_part statement_part
    (14) declarative_part -> . declaration_group
    (15) declarative_part -> . declarative_part declaration_group
    (16) declaration_group -> . constant_definition_group
    (17) declaration_group -> . type_definition_group
    (18) declaration_group -> . variable_declaration_group
    (19) constant_definition_group -> . CONST constant_definition SEMICOLON
    (20) constant_definition_group -> . constant_definition_group constant_definition SEMICOLON
    (43) type_definition_group -> . TYPE type_definition SEMICOLON
    (44) type_definition_group -> . type_definition_group type_definition SEMICOLON
    (38) variable_declaration_group -> . VAR variable_declaration SEMICOLON
    (39) variable_declaration_group -> . variable_declaration_group variable_declaration SEMICOLON

    CONST           shift and go to state 16
    TYPE            shift and go to state 17
    VAR             shift and go to state 18

    program_block                  shift and go to state 9
    block                          shift and go to state 10
    declarative_part               shift and go to state 11
    declaration_group              shift and go to state 12
    constant_definition_group      shift and go to state 13
    type_definition_group          shift and go to state 14
    variable_declaration_group     shift and go to state 15

state 5

    (2) program_heading -> PROGRAM identifier .
    (3) program_heading -> PROGRAM identifier . LPAREN program_parameter_list RPAREN
    (9) identifier -> identifier . STRING
    (10) identifier -> identifier . NUMBER

    SEMICOLON       reduce using rule 2 (program_heading -> PROGRAM identifier .)
    LPAREN          shift and go to state 19
    STRING          shift and go to state 20
    NUMBER          shift and go to state 21


state 6

    (7) identifier -> ID .

    LPAREN          reduce using rule 7 (identifier -> ID .)
    STRING          reduce using rule 7 (identifier -> ID .)
    NUMBER          reduce using rule 7 (identifier -> ID .)
    SEMICOLON       reduce using rule 7 (identifier -> ID .)
    COLON           reduce using rule 7 (identifier -> ID .)
    COMMA           reduce using rule 7 (identifier -> ID .)
    RPAREN          reduce using rule 7 (identifier -> ID .)


state 7

    (8) identifier -> UNDERSCORE .

    LPAREN          reduce using rule 8 (identifier -> UNDERSCORE .)
    STRING          reduce using rule 8 (identifier -> UNDERSCORE .)
    NUMBER          reduce using rule 8 (identifier -> UNDERSCORE .)
    SEMICOLON       reduce using rule 8 (identifier -> UNDERSCORE .)
    COLON           reduce using rule 8 (identifier -> UNDERSCORE .)
    COMMA           reduce using rule 8 (identifier -> UNDERSCORE .)
    RPAREN          reduce using rule 8 (identifier -> UNDERSCORE .)


state 8

    (11) identifier -> NUMBER .

    LPAREN          reduce using rule 11 (identifier -> NUMBER .)
    STRING          reduce using rule 11 (identifier -> NUMBER .)
    NUMBER          reduce using rule 11 (identifier -> NUMBER .)
    SEMICOLON       reduce using rule 11 (identifier -> NUMBER .)
    COLON           reduce using rule 11 (identifier -> NUMBER .)
    COMMA           reduce using rule 11 (identifier -> NUMBER .)
    RPAREN          reduce using rule 11 (identifier -> NUMBER .)


state 9

    (1) program -> program_heading SEMICOLON program_block .

    $end            reduce using rule 1 (program -> program_heading SEMICOLON program_block .)


state 10

    (12) program_block -> block .

    $end            reduce using rule 12 (program_block -> block .)


state 11

    (13) block -> declarative_part . statement_part
    (15) declarative_part -> declarative_part . declaration_group
    (46) statement_part -> . compound_statement
    (16) declaration_group -> . constant_definition_group
    (17) declaration_group -> . type_definition_group
    (18) declaration_group -> . variable_declaration_group
    (47) compound_statement -> . BEGIN statement_sequence END_DOT
    (48) compound_statement -> . BEGIN statement_sequence END SEMICOLON
    (19) constant_definition_group -> . CONST constant_definition SEMICOLON
    (20) constant_definition_group -> . constant_definition_group constant_definition SEMICOLON
    (43) type_definition_group -> . TYPE type_definition SEMICOLON
    (44) type_definition_group -> . type_definition_group type_definition SEMICOLON
    (38) variable_declaration_group -> . VAR variable_declaration SEMICOLON
    (39) variable_declaration_group -> . variable_declaration_group variable_declaration SEMICOLON

    BEGIN           shift and go to state 25
    CONST           shift and go to state 16
    TYPE            shift and go to state 17
    VAR             shift and go to state 18

    statement_part                 shift and go to state 22
    declaration_group              shift and go to state 23
    compound_statement             shift and go to state 24
    constant_definition_group      shift and go to state 13
    type_definition_group          shift and go to state 14
    variable_declaration_group     shift and go to state 15

state 12

    (14) declarative_part -> declaration_group .

    BEGIN           reduce using rule 14 (declarative_part -> declaration_group .)
    CONST           reduce using rule 14 (declarative_part -> declaration_group .)
    TYPE            reduce using rule 14 (declarative_part -> declaration_group .)
    VAR             reduce using rule 14 (declarative_part -> declaration_group .)


state 13

    (16) declaration_group -> constant_definition_group .
    (20) constant_definition_group -> constant_definition_group . constant_definition SEMICOLON
    (21) constant_definition -> . ID OPERATOR constant

    BEGIN           reduce using rule 16 (declaration_group -> constant_definition_group .)
    CONST           reduce using rule 16 (declaration_group -> constant_definition_group .)
    TYPE            reduce using rule 16 (declaration_group -> constant_definition_group .)
    VAR             reduce using rule 16 (declaration_group -> constant_definition_group .)
    ID              shift and go to state 27

    constant_definition            shift and go to state 26

state 14

    (17) declaration_group -> type_definition_group .
    (44) type_definition_group -> type_definition_group . type_definition SEMICOLON
    (45) type_definition -> . ID ASSIGN type_denoter

    BEGIN           reduce using rule 17 (declaration_group -> type_definition_group .)
    CONST           reduce using rule 17 (declaration_group -> type_definition_group .)
    TYPE            reduce using rule 17 (declaration_group -> type_definition_group .)
    VAR             reduce using rule 17 (declaration_group -> type_definition_group .)
    ID              shift and go to state 29

    type_definition                shift and go to state 28

state 15

    (18) declaration_group -> variable_declaration_group .
    (39) variable_declaration_group -> variable_declaration_group . variable_declaration SEMICOLON
    (40) variable_declaration -> . identifier_list COLON type_denoter
    (5) identifier_list -> . identifier
    (6) identifier_list -> . identifier_list COMMA identifier
    (7) identifier -> . ID
    (8) identifier -> . UNDERSCORE
    (9) identifier -> . identifier STRING
    (10) identifier -> . identifier NUMBER
    (11) identifier -> . NUMBER

    BEGIN           reduce using rule 18 (declaration_group -> variable_declaration_group .)
    CONST           reduce using rule 18 (declaration_group -> variable_declaration_group .)
    TYPE            reduce using rule 18 (declaration_group -> variable_declaration_group .)
    VAR             reduce using rule 18 (declaration_group -> variable_declaration_group .)
    ID              shift and go to state 6
    UNDERSCORE      shift and go to state 7
    NUMBER          shift and go to state 8

    variable_declaration           shift and go to state 30
    identifier_list                shift and go to state 31
    identifier                     shift and go to state 32

state 16

    (19) constant_definition_group -> CONST . constant_definition SEMICOLON
    (21) constant_definition -> . ID OPERATOR constant

    ID              shift and go to state 27

    constant_definition            shift and go to state 33

state 17

    (43) type_definition_group -> TYPE . type_definition SEMICOLON
    (45) type_definition -> . ID ASSIGN type_denoter

    ID              shift and go to state 29

    type_definition                shift and go to state 34

state 18

    (38) variable_declaration_group -> VAR . variable_declaration SEMICOLON
    (40) variable_declaration -> . identifier_list COLON type_denoter
    (5) identifier_list -> . identifier
    (6) identifier_list -> . identifier_list COMMA identifier
    (7) identifier -> . ID
    (8) identifier -> . UNDERSCORE
    (9) identifier -> . identifier STRING
    (10) identifier -> . identifier NUMBER
    (11) identifier -> . NUMBER

    ID              shift and go to state 6
    UNDERSCORE      shift and go to state 7
    NUMBER          shift and go to state 8

    variable_declaration           shift and go to state 35
    identifier_list                shift and go to state 31
    identifier                     shift and go to state 32

state 19

    (3) program_heading -> PROGRAM identifier LPAREN . program_parameter_list RPAREN
    (4) program_parameter_list -> . identifier_list
    (5) identifier_list -> . identifier
    (6) identifier_list -> . identifier_list COMMA identifier
    (7) identifier -> . ID
    (8) identifier -> . UNDERSCORE
    (9) identifier -> . identifier STRING
    (10) identifier -> . identifier NUMBER
    (11) identifier -> . NUMBER

    ID              shift and go to state 6
    UNDERSCORE      shift and go to state 7
    NUMBER          shift and go to state 8

    identifier                     shift and go to state 32
    program_parameter_list         shift and go to state 36
    identifier_list                shift and go to state 37

state 20

    (9) identifier -> identifier STRING .

    LPAREN          reduce using rule 9 (identifier -> identifier STRING .)
    STRING          reduce using rule 9 (identifier -> identifier STRING .)
    NUMBER          reduce using rule 9 (identifier -> identifier STRING .)
    SEMICOLON       reduce using rule 9 (identifier -> identifier STRING .)
    COLON           reduce using rule 9 (identifier -> identifier STRING .)
    COMMA           reduce using rule 9 (identifier -> identifier STRING .)
    RPAREN          reduce using rule 9 (identifier -> identifier STRING .)


state 21

    (10) identifier -> identifier NUMBER .

    LPAREN          reduce using rule 10 (identifier -> identifier NUMBER .)
    STRING          reduce using rule 10 (identifier -> identifier NUMBER .)
    NUMBER          reduce using rule 10 (identifier -> identifier NUMBER .)
    SEMICOLON       reduce using rule 10 (identifier -> identifier NUMBER .)
    COLON           reduce using rule 10 (identifier -> identifier NUMBER .)
    COMMA           reduce using rule 10 (identifier -> identifier NUMBER .)
    RPAREN          reduce using rule 10 (identifier -> identifier NUMBER .)


state 22

    (13) block -> declarative_part statement_part .

    $end            reduce using rule 13 (block -> declarative_part statement_part .)


state 23

    (15) declarative_part -> declarative_part declaration_group .

    BEGIN           reduce using rule 15 (declarative_part -> declarative_part declaration_group .)
    CONST           reduce using rule 15 (declarative_part -> declarative_part declaration_group .)
    TYPE            reduce using rule 15 (declarative_part -> declarative_part declaration_group .)
    VAR             reduce using rule 15 (declarative_part -> declarative_part declaration_group .)


state 24

    (46) statement_part -> compound_statement .

    $end            reduce using rule 46 (statement_part -> compound_statement .)


state 25

    (47) compound_statement -> BEGIN . statement_sequence END_DOT
    (48) compound_statement -> BEGIN . statement_sequence END SEMICOLON
    (49) statement_sequence -> . statement
    (50) statement_sequence -> . statement_sequence SEMICOLON statement
    (51) statement -> . simple_statement
    (52) statement -> . structured_statement
    (53) simple_statement -> . empty_statement
    (54) simple_statement -> . assignment_statement
    (55) simple_statement -> . procedure_statement
    (56) structured_statement -> . compound_statement
    (57) structured_statement -> . conditional_statement
    (58) structured_statement -> . repetitive_statement
    (59) empty_statement -> . SEMICOLON
    (60) assignment_statement -> . assignment_statement_lhs ASSIGN expression
    (106) procedure_statement -> . procedure_identifier read_parameter_list
    (107) procedure_statement -> . procedure_identifier write_parameter_list
    (47) compound_statement -> . BEGIN statement_sequence END_DOT
    (48) compound_statement -> . BEGIN statement_sequence END SEMICOLON
    (89) conditional_statement -> . if_statement
    (94) repetitive_statement -> . while_statement
    (61) assignment_statement_lhs -> . variable_access
    (108) procedure_identifier -> . ID
    (90) if_statement -> . IF boolean_expression THEN statement else_part
    (95) while_statement -> . WHILE boolean_expression DO statement
    (63) variable_access -> . entire_variable
    (64) variable_access -> . component_variable
    (65) entire_variable -> . variable_identifier
    (67) component_variable -> . field_designator
    (66) variable_identifier -> . ID
    (68) field_designator -> . field_designator_identifier
    (69) field_designator_identifier -> . ID

    SEMICOLON       shift and go to state 39
    BEGIN           shift and go to state 25
    ID              shift and go to state 54
    IF              shift and go to state 55
    WHILE           shift and go to state 56

    statement_sequence             shift and go to state 38
    statement                      shift and go to state 40
    simple_statement               shift and go to state 41
    structured_statement           shift and go to state 42
    empty_statement                shift and go to state 43
    assignment_statement           shift and go to state 44
    procedure_statement            shift and go to state 45
    compound_statement             shift and go to state 46
    conditional_statement          shift and go to state 47
    repetitive_statement           shift and go to state 48
    assignment_statement_lhs       shift and go to state 49
    procedure_identifier           shift and go to state 50
    if_statement                   shift and go to state 51
    while_statement                shift and go to state 52
    variable_access                shift and go to state 53
    entire_variable                shift and go to state 57
    component_variable             shift and go to state 58
    variable_identifier            shift and go to state 59
    field_designator               shift and go to state 60
    field_designator_identifier    shift and go to state 61

state 26

    (20) constant_definition_group -> constant_definition_group constant_definition . SEMICOLON

    SEMICOLON       shift and go to state 62


state 27

    (21) constant_definition -> ID . OPERATOR constant

    OPERATOR        shift and go to state 63


state 28

    (44) type_definition_group -> type_definition_group type_definition . SEMICOLON

    SEMICOLON       shift and go to state 64


state 29

    (45) type_definition -> ID . ASSIGN type_denoter

    ASSIGN          shift and go to state 65


state 30

    (39) variable_declaration_group -> variable_declaration_group variable_declaration . SEMICOLON

    SEMICOLON       shift and go to state 66


state 31

    (40) variable_declaration -> identifier_list . COLON type_denoter
    (6) identifier_list -> identifier_list . COMMA identifier

    COLON           shift and go to state 67
    COMMA           shift and go to state 68


state 32

    (5) identifier_list -> identifier .
    (9) identifier -> identifier . STRING
    (10) identifier -> identifier . NUMBER

    COLON           reduce using rule 5 (identifier_list -> identifier .)
    COMMA           reduce using rule 5 (identifier_list -> identifier .)
    RPAREN          reduce using rule 5 (identifier_list -> identifier .)
    STRING          shift and go to state 20
    NUMBER          shift and go to state 21


state 33

    (19) constant_definition_group -> CONST constant_definition . SEMICOLON

    SEMICOLON       shift and go to state 69


state 34

    (43) type_definition_group -> TYPE type_definition . SEMICOLON

    SEMICOLON       shift and go to state 70


state 35

    (38) variable_declaration_group -> VAR variable_declaration . SEMICOLON

    SEMICOLON       shift and go to state 71


state 36

    (3) program_heading -> PROGRAM identifier LPAREN program_parameter_list . RPAREN

    RPAREN          shift and go to state 72


state 37

    (4) program_parameter_list -> identifier_list .
    (6) identifier_list -> identifier_list . COMMA identifier

    RPAREN          reduce using rule 4 (program_parameter_list -> identifier_list .)
    COMMA           shift and go to state 68


state 38

    (47) compound_statement -> BEGIN statement_sequence . END_DOT
    (48) compound_statement -> BEGIN statement_sequence . END SEMICOLON
    (50) statement_sequence -> statement_sequence . SEMICOLON statement

    END_DOT         shift and go to state 73
    END             shift and go to state 74
    SEMICOLON       shift and go to state 75


state 39

    (59) empty_statement -> SEMICOLON .

    END_DOT         reduce using rule 59 (empty_statement -> SEMICOLON .)
    END             reduce using rule 59 (empty_statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 59 (empty_statement -> SEMICOLON .)
    ELSE            reduce using rule 59 (empty_statement -> SEMICOLON .)


state 40

    (49) statement_sequence -> statement .

    END_DOT         reduce using rule 49 (statement_sequence -> statement .)
    END             reduce using rule 49 (statement_sequence -> statement .)
    SEMICOLON       reduce using rule 49 (statement_sequence -> statement .)


state 41

    (51) statement -> simple_statement .

    END_DOT         reduce using rule 51 (statement -> simple_statement .)
    END             reduce using rule 51 (statement -> simple_statement .)
    SEMICOLON       reduce using rule 51 (statement -> simple_statement .)
    ELSE            reduce using rule 51 (statement -> simple_statement .)


state 42

    (52) statement -> structured_statement .

    END_DOT         reduce using rule 52 (statement -> structured_statement .)
    END             reduce using rule 52 (statement -> structured_statement .)
    SEMICOLON       reduce using rule 52 (statement -> structured_statement .)
    ELSE            reduce using rule 52 (statement -> structured_statement .)


state 43

    (53) simple_statement -> empty_statement .

    END_DOT         reduce using rule 53 (simple_statement -> empty_statement .)
    END             reduce using rule 53 (simple_statement -> empty_statement .)
    SEMICOLON       reduce using rule 53 (simple_statement -> empty_statement .)
    ELSE            reduce using rule 53 (simple_statement -> empty_statement .)


state 44

    (54) simple_statement -> assignment_statement .

    END_DOT         reduce using rule 54 (simple_statement -> assignment_statement .)
    END             reduce using rule 54 (simple_statement -> assignment_statement .)
    SEMICOLON       reduce using rule 54 (simple_statement -> assignment_statement .)
    ELSE            reduce using rule 54 (simple_statement -> assignment_statement .)


state 45

    (55) simple_statement -> procedure_statement .

    END_DOT         reduce using rule 55 (simple_statement -> procedure_statement .)
    END             reduce using rule 55 (simple_statement -> procedure_statement .)
    SEMICOLON       reduce using rule 55 (simple_statement -> procedure_statement .)
    ELSE            reduce using rule 55 (simple_statement -> procedure_statement .)


state 46

    (56) structured_statement -> compound_statement .

    END_DOT         reduce using rule 56 (structured_statement -> compound_statement .)
    END             reduce using rule 56 (structured_statement -> compound_statement .)
    SEMICOLON       reduce using rule 56 (structured_statement -> compound_statement .)
    ELSE            reduce using rule 56 (structured_statement -> compound_statement .)


state 47

    (57) structured_statement -> conditional_statement .

    END_DOT         reduce using rule 57 (structured_statement -> conditional_statement .)
    END             reduce using rule 57 (structured_statement -> conditional_statement .)
    SEMICOLON       reduce using rule 57 (structured_statement -> conditional_statement .)
    ELSE            reduce using rule 57 (structured_statement -> conditional_statement .)


state 48

    (58) structured_statement -> repetitive_statement .

    END_DOT         reduce using rule 58 (structured_statement -> repetitive_statement .)
    END             reduce using rule 58 (structured_statement -> repetitive_statement .)
    SEMICOLON       reduce using rule 58 (structured_statement -> repetitive_statement .)
    ELSE            reduce using rule 58 (structured_statement -> repetitive_statement .)


state 49

    (60) assignment_statement -> assignment_statement_lhs . ASSIGN expression

    ASSIGN          shift and go to state 76


state 50

    (106) procedure_statement -> procedure_identifier . read_parameter_list
    (107) procedure_statement -> procedure_identifier . write_parameter_list
    (103) read_parameter_list -> . LPAREN variable_access RPAREN
    (104) read_parameter_list -> . LPAREN file_variable COMMA variable_access RPAREN
    (105) read_parameter_list -> . LPAREN file_variable COMMA variable_access COMMA variable_access RPAREN
    (99) write_parameter_list -> . LPAREN write_parameter RPAREN
    (100) write_parameter_list -> . LPAREN STRING COMMA write_parameter RPAREN
    (101) write_parameter_list -> . LPAREN file_variable COMMA write_parameter RPAREN
    (102) write_parameter_list -> . LPAREN file_variable COMMA write_parameter COMMA write_parameter RPAREN

    LPAREN          shift and go to state 79

    read_parameter_list            shift and go to state 77
    write_parameter_list           shift and go to state 78

state 51

    (89) conditional_statement -> if_statement .

    END_DOT         reduce using rule 89 (conditional_statement -> if_statement .)
    END             reduce using rule 89 (conditional_statement -> if_statement .)
    SEMICOLON       reduce using rule 89 (conditional_statement -> if_statement .)
    ELSE            reduce using rule 89 (conditional_statement -> if_statement .)


state 52

    (94) repetitive_statement -> while_statement .

    END_DOT         reduce using rule 94 (repetitive_statement -> while_statement .)
    END             reduce using rule 94 (repetitive_statement -> while_statement .)
    SEMICOLON       reduce using rule 94 (repetitive_statement -> while_statement .)
    ELSE            reduce using rule 94 (repetitive_statement -> while_statement .)


state 53

    (61) assignment_statement_lhs -> variable_access .

    ASSIGN          reduce using rule 61 (assignment_statement_lhs -> variable_access .)


state 54

    (108) procedure_identifier -> ID .
    (66) variable_identifier -> ID .
    (69) field_designator_identifier -> ID .

  ! reduce/reduce conflict for ASSIGN resolved using rule 66 (variable_identifier -> ID .)
    LPAREN          reduce using rule 108 (procedure_identifier -> ID .)
    ASSIGN          reduce using rule 66 (variable_identifier -> ID .)

  ! ASSIGN          [ reduce using rule 69 (field_designator_identifier -> ID .) ]


state 55

    (90) if_statement -> IF . boolean_expression THEN statement else_part
    (91) boolean_expression -> . expression
    (70) expression -> . shift_expression
    (71) expression -> . shift_expression relational_operator shift_expression
    (73) shift_expression -> . simple_expression
    (74) simple_expression -> . term
    (75) simple_expression -> . term ADD term
    (76) simple_expression -> . term MUL term
    (77) term -> . factor
    (78) term -> . factor multiplying_operator factor
    (79) factor -> . sign unsigned_constant
    (80) factor -> . number
    (81) factor -> . variable_access
    (82) factor -> . LPAREN expression RPAREN
    (83) factor -> . NOT factor
    (25) sign -> . ADD
    (26) sign -> . MUL
    (27) number -> . decimal_integer
    (28) number -> . sign decimal_integer
    (63) variable_access -> . entire_variable
    (64) variable_access -> . component_variable
    (29) decimal_integer -> . digit_sequence
    (65) entire_variable -> . variable_identifier
    (67) component_variable -> . field_designator
    (30) digit_sequence -> . NUMBER
    (31) digit_sequence -> . digit_sequence NUMBER
    (66) variable_identifier -> . ID
    (68) field_designator -> . field_designator_identifier
    (69) field_designator_identifier -> . ID

    LPAREN          shift and go to state 91
    NOT             shift and go to state 92
    ADD             shift and go to state 85
    MUL             shift and go to state 86
    NUMBER          shift and go to state 95
    ID              shift and go to state 96

    boolean_expression             shift and go to state 80
    expression                     shift and go to state 81
    shift_expression               shift and go to state 82
    simple_expression              shift and go to state 83
    term                           shift and go to state 84
    factor                         shift and go to state 87
    sign                           shift and go to state 88
    number                         shift and go to state 89
    variable_access                shift and go to state 90
    decimal_integer                shift and go to state 93
    entire_variable                shift and go to state 57
    component_variable             shift and go to state 58
    digit_sequence                 shift and go to state 94
    variable_identifier            shift and go to state 59
    field_designator               shift and go to state 60
    field_designator_identifier    shift and go to state 61

state 56

    (95) while_statement -> WHILE . boolean_expression DO statement
    (91) boolean_expression -> . expression
    (70) expression -> . shift_expression
    (71) expression -> . shift_expression relational_operator shift_expression
    (73) shift_expression -> . simple_expression
    (74) simple_expression -> . term
    (75) simple_expression -> . term ADD term
    (76) simple_expression -> . term MUL term
    (77) term -> . factor
    (78) term -> . factor multiplying_operator factor
    (79) factor -> . sign unsigned_constant
    (80) factor -> . number
    (81) factor -> . variable_access
    (82) factor -> . LPAREN expression RPAREN
    (83) factor -> . NOT factor
    (25) sign -> . ADD
    (26) sign -> . MUL
    (27) number -> . decimal_integer
    (28) number -> . sign decimal_integer
    (63) variable_access -> . entire_variable
    (64) variable_access -> . component_variable
    (29) decimal_integer -> . digit_sequence
    (65) entire_variable -> . variable_identifier
    (67) component_variable -> . field_designator
    (30) digit_sequence -> . NUMBER
    (31) digit_sequence -> . digit_sequence NUMBER
    (66) variable_identifier -> . ID
    (68) field_designator -> . field_designator_identifier
    (69) field_designator_identifier -> . ID

    LPAREN          shift and go to state 91
    NOT             shift and go to state 92
    ADD             shift and go to state 85
    MUL             shift and go to state 86
    NUMBER          shift and go to state 95
    ID              shift and go to state 96

    boolean_expression             shift and go to state 97
    expression                     shift and go to state 81
    shift_expression               shift and go to state 82
    simple_expression              shift and go to state 83
    term                           shift and go to state 84
    factor                         shift and go to state 87
    sign                           shift and go to state 88
    number                         shift and go to state 89
    variable_access                shift and go to state 90
    decimal_integer                shift and go to state 93
    entire_variable                shift and go to state 57
    component_variable             shift and go to state 58
    digit_sequence                 shift and go to state 94
    variable_identifier            shift and go to state 59
    field_designator               shift and go to state 60
    field_designator_identifier    shift and go to state 61

state 57

    (63) variable_access -> entire_variable .
